# Rustora

./: .gitignore  Cargo.toml  LICENSE  README.md  build-and-install.sh  cosmic.md  flatpak_commands_and_features.md  install_packages_Fedora.sh  monitor_logs.sh
data/: runners.json
docs/: CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  TECHNICAL.md  USAGE.md
src/: logger.rs  main.rs
src/gui/: app.rs  cachyos_kernel_dialog.rs  device_install_dialog.rs  dialog_common.rs  dialog_design.rs  flatpak_dialog.rs  flatpak_remove_dialog.rs  flatpak_update_dialog.rs  fonts.rs  gaming_meta_dialog.rs  hyprland_dialog.rs  hyprland_dotfiles_dialog.rs  install_dialog.rs  kernel_install_dialog.rs  maintenance_dialog.rs  mod.rs  package_dialog.rs  proton_changelog_dialog.rs  proton_install_dialog.rs  rpm_dialog.rs  settings.rs  settings_dialog.rs  tabs.rs  theme.rs  update_dialog.rs  update_settings_dialog.rs
src/gui/tabs/: alien.rs  device.rs  flatpak.rs  fpm.rs  installed.rs  kernel.rs  maintenance.rs  repo.rs  search.rs  tweaks.rs  update.rs
