[package]
name = "fedoraforge"
version = "0.1.0"
edition = "2021"
authors = ["FedoraForge Contributors"]
description = "A modern package manager for Fedora"
license = "MIT"
repository = "https://github.com/yourusername/fedoraforge"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
