[package]
name = "rustora"
version = "0.1.5"
edition = "2021"
authors = ["Rustora Contributors"]
description = "A modern package manager for Fedora"
license = "MIT"
repository = "https://github.com/yourusername/rustora"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
cfhdb = { git = "https://github.com/Nobara-Project/cfhdb", version = "0.1.2" }
rayon = "1.8"
async-channel = "2.3"
users = "0.11"
textwrap = "0.16"
base64 = "0.22"
tar = "0.4"
flate2 = "1.0"
